--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "anchor": "cd anchor && anchor",
     "anchor-build": "cd anchor && anchor build",
     "anchor-localnet": "cd anchor && anchor localnet",
-    "anchor-test": "cd anchor && anchor test",
+    "anchor-test": "cd anchor && mocha -r ts-node/register tests/**/*.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -34,16 +34,21 @@
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
+    "@types/chai": "^5.2.1",
     "@types/jest": "^29.0.3",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "chai": "^4.3.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "jest": "^29.0.3",
+    "mocha": "^11.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.0.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   },
   "create-solana-dapp": {
